- Changed exception handling   - No Runtime Exceptions (like IllegalState) anymore - Added benchmark section in Readme - Added benchmark for VRPTW with large instances to repo (more will be added in future) - Minor cleanups in code